fix: scrollbar (just use webkit lol)

--- a/src/style/style.sass
+++ b/src/style/style.sass
@@ -18,19 +18,19 @@ button:hover
     display: flex
     flex-direction: row
 
-//::-webkit-scrollbar
-//    width: $scrollbar-width
-//
-//::-webkit-scrollbar-track
-//    background: $secondary-background
-//    margin-bottom: $footer-height
-//
-//::-webkit-scrollbar-thumb
-//    border-radius: 0.6rem
-//    background: #888
-//
-//::-webkit-scrollbar-thumb:hover
-//    background: #555
+::-webkit-scrollbar
+    width: $scrollbar-width
+
+::-webkit-scrollbar-track
+    background: $secondary-background
+    margin-bottom: $footer-height
+
+::-webkit-scrollbar-thumb
+    border-radius: 0.6rem
+    background: #888
+
+::-webkit-scrollbar-thumb:hover
+    background: #555
 
 @media (prefers-color-scheme: dark)
     button
@@ -42,12 +42,12 @@ button:hover
         background: $primary-background-dark
         color: $secondary-text
 
-    //::-webkit-scrollbar-track
-    //    background: $secondary-background-dark
-    //
-    //::-webkit-scrollbar-thumb
-    //    border-radius: 0.6rem
-    //    background: #696767
-    //
-    //::-webkit-scrollbar-thumb:hover
-    //    background: #4d4d4d
+    ::-webkit-scrollbar-track
+        background: $secondary-background-dark
+
+    ::-webkit-scrollbar-thumb
+        border-radius: 0.6rem
+        background: #696767
+
+    ::-webkit-scrollbar-thumb:hover
+        background: #4d4d4d
