--- a/src/style/variables.sass
+++ b/src/style/variables.sass
@@ -12,5 +12,5 @@ $secondary-text: #E0E0E0
 $footer-height: 3.4rem
 $top-bottom-margin: 0.7rem
 
-//$scrollbar-drawer: #e2e3e3
-//$scrollbar-width: 0.5rem
+$scrollbar-drawer: #e2e3e3
+$scrollbar-width: 0.5rem
